scrollpercent and excerpt

--- a/_config.yml
+++ b/_config.yml
@@ -138,8 +138,8 @@ menu_settings:
 
 sidebar:
   # Sidebar Position.
-  position: left
-  #position: right
+  # position: left
+  position: right
 
   # Manual define the sidebar width. If commented, will be default for:
   # Muse | Mist: 320
@@ -237,6 +237,12 @@ excerpt_description: true
 # Read more button
 # If true, the read more button will be displayed in excerpt section.
 read_more_btn: true
+
+excerpt:
+  depth: 5
+  excerpt_excludes: []
+  more_excludes: []
+  hideWholePostExcerpts: true
 
 # Post meta display settings
 post_meta:
@@ -368,7 +374,7 @@ back2top:
   # Back to top in sidebar.
   sidebar: false
   # Scroll percent label in b2t button.
-  scrollpercent: false
+  scrollpercent: true
 
 # Reading progress bar
 reading_progress:
@@ -995,3 +1001,4 @@ vendors:
 css: css
 js: js
 images: images
+
