--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "source/lib/pjax"]
 	path = source/lib/pjax
 	url = https://github.com/theme-next/theme-next-pjax
+[submodule "source/lib/fancybox"]
+	path = source/lib/fancybox
+	url = https://github.com/theme-next/theme-next-fancybox3
